<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <FrameLayout
        android:id="@+id/parentFrameLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ImageView
            android:id="@+id/backgroundImageView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:src="@drawable/background" >
        </ImageView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/nameSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/user_array"
                android:prompt="@string/prompt"
                android:spinnerMode="dialog" />

            <LinearLayout
                android:id="@+id/timerBackground"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/timerbackground"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/timer"
                    style="@style/timerText"
                    android:text="@string/timer" >
                </TextView>

                <TextView
                    android:id="@+id/timerMs"
                    style="@style/timerText"
                    android:paddingTop="30sp"
                    android:text="@string/timerMs"
                    android:textSize="30sp" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttonarea"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/stopButton"
                    style="@style/buttonText"
                    android:layout_width="100dip"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/stopbuttonstates"
                    android:shadowColor="#DF726E"
                    android:text="@string/stopText"
                    android:textColor="#7A1100"
                    android:visibility="gone" >
                </Button>

                <Button
                    android:id="@+id/lapButton"
                    style="@style/buttonText"
                    android:layout_width="100dip"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/lapbuttonstates"
                    android:shadowColor="#00A614"
                    android:text="@string/lapText"
                    android:textColor="#7A1100"
                    android:visibility="gone" >
                </Button>

                <Button
                    android:id="@+id/startButton"
                    style="@style/buttonText"
                    android:layout_width="100dip"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/startbuttonstates"
                    android:shadowColor="#FBEBC5"
                    android:text="@string/startText"
                    android:textColor="#5F3A00" >
                </Button>

                <Button
                    android:id="@+id/resetButton"
                    style="@style/buttonText"
                    android:layout_width="100dip"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/resetbuttonstates"
                    android:shadowColor="#959597"
                    android:text="@string/resetText"
                    android:textColor="#2E2E2E" >
                </Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/hline" >
                </ImageView>

                <ViewFlipper
                    android:id="@+id/details"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <ScrollView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:fillViewport="true" >

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:orientation="vertical" >

                            <LinearLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:orientation="horizontal" >

                                <TextView
                                    android:id="@+id/nameNumberTextView"
                                    android:layout_width="0dip"
                                    android:layout_height="fill_parent"
                                    android:layout_weight="1"
                                    android:text="18 - Name"
                                    android:textStyle="bold" >
                                </TextView>

                                <LinearLayout
                                    android:layout_width="0dip"
                                    android:layout_height="fill_parent"
                                    android:layout_weight="1"
                                    android:orientation="vertical" >

                                    <TextView
                                        android:id="@+id/startTimeTextView"
                                        android:layout_width="fill_parent"
                                        android:layout_height="wrap_content"
                                        android:text="Start time: 0.0 ms"
                                        android:textStyle="bold" >
                                    </TextView>

                                    <TextView
                                        android:id="@+id/endTimeTextView"
                                        android:layout_width="fill_parent"
                                        android:layout_height="wrap_content"
                                        android:text="End time: 0.0 ms"
                                        android:textStyle="bold" >
                                    </TextView>
                                </LinearLayout>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="10dp"
                                android:orientation="horizontal" >

                                <ImageView
                                    android:id="@+id/obstructionImageView1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:visibility="gone" >
                                </ImageView>

                                <ImageView
                                    android:id="@+id/obstructionImageView2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:visibility="gone" >
                                </ImageView>
                            </LinearLayout>
                        </LinearLayout>
                    </ScrollView>
                </ViewFlipper>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <!-- For commercials! -->
    <!--
         <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sampleText" >
            </TextView>
        </LinearLayout>
    </RelativeLayout>
    -->

</RelativeLayout>